cabal-version:       2.2

name:                efyu-lang
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Akshay Nair
maintainer:          phenax5@gmail.com
build-type:          Simple

common lib
  ghc-options: -Wdefault -Wextra -Wno-unused-do-bind -fwarn-tabs -Wno-missing-home-modules
  -- ghc-options: -Wall
  build-depends:
    megaparsec,
    hspec-megaparsec,
    containers,
    pretty-simple,
    text,
    raw-strings-qq,
    transformers,
    base >=4.14 && <4.15
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  default-extensions:
    GADTs
    , LambdaCase
    , StandaloneDeriving
    , ScopedTypeVariables
    , RankNTypes
    , QuantifiedConstraints
    , TypeApplications
    , TypeOperators
    , MultiParamTypeClasses
    , ConstraintKinds
    , DataKinds
    , PolyKinds
    , KindSignatures
    , FlexibleInstances
    , FlexibleContexts
    , QuasiQuotes
    , TupleSections

Test-Suite test
  import: lib
  hs-source-dirs:
    src
    tests
  main-is: _main.hs
  type: exitcode-stdio-1.0
  default: false
  build-depends:
    hspec,
    hspec-golden

library library
  import: lib
  hs-source-dirs: src
  exposed-modules:
    Efyu

executable efyu
  import: lib
  hs-source-dirs:
    app
    src
  main-is: Main.hs
